# makeshape

./: .gitignore  CMakeLists.txt  README.md
cmake/: CMakeLists.txt.cxxopts  README.md
examples/: CMakeLists.txt  README.md
examples/000_start_here/: CMakeLists.txt  main.cc
examples/100_spatial_octree/: CMakeLists.txt  README.md  main.cc
examples/101_spatial_kdtree/: CMakeLists.txt  README.md  main.cc
examples/101_spatial_quadtree/: CMakeLists.txt  main.cc  quadtree.cc  quadtree.hh
examples/200_algs_fast_poisson_sampling/: CMakeLists.txt  README.md  main.cc
experimental/: plot.py  plot3d.py  samples.csv
scripts/: README.md  winbuild.bat  winbuild_all.bat  winbuild_dbg.bat  winbuild_dbg_target.bat  winbuild_rel.bat
src/: CMakeLists.txt  README.md
src/algs/: CMakeLists.txt  fast_poisson_sampling.cc  fast_poisson_sampling.hh
src/app/: CMakeLists.txt  app.cc  app.hh  main.cc
src/common/: CMakeLists.txt  common.cc  common.hh  octree.cc  octree.hh
src/common/unittests/: CMakeLists.txt  unittest_octree.cc
src/dual_contouring/: CMakeLists.txt  dual_contouring.cc  dual_contouring.hh
src/icp/: CMakeLists.txt  icp.cc  icp.hh  least_sq_rigid_motion.cc  least_sq_rigid_motion.hh
src/icp/unittests/: CMakeLists.txt  unittest_least_sq.cc
src/mesh/: CMakeLists.txt  mesh.cc  mesh.hh
src/shapes/: CMakeLists.txt
src/spatial/: CMakeLists.txt  aabb.cc  aabb.hh  bsphere.cc  bsphere.hh  edges.cc  edges.hh  intersections.cc  intersections.hh  kdtree.cc  kdtree.hh  kdtree2.cc  kdtree2.hh  mesh.cc  mesh.hh  octree.cc  octree.hh  plane.hh  ray.hh  regular_grid.cc  regular_grid.hh  sdf.cc  sdf.hh  triangle.hh  trimesh.cc  trimesh.hh
src/spatial/unittests/: CMakeLists.txt  main.cc  unittest_kdtree.cc  unittest_octree.cc
src/surface_reconstruction/: CMakeLists.txt
src/triangulate/: CMakeLists.txt
src/triangulate/marching_cubes/: CMakeLists.txt  marching_cubes.cc  marching_cubes.hh
