#----------------------------------------------------------------------
# makeshape | examples
#----------------------------------------------------------------------
# use the following as a template
add_subdirectory(000_start_here)

add_subdirectory(100_spatial_octree)
#add_subdirectory(101_spatial_quadtree)
