#----------------------------------------------------------------------
# makeshape
#----------------------------------------------------------------------

add_subdirectory(common)
add_dubdirectory(spatial)
add_subdirectory(mesh)
add_subdirectory(dual_contouring)
# add_subdirectory(poisson_surf_recon)
# add_subdirectory(wavelets_surf_recon)
add_subdirectory(shapes)

add_subdirectory(app)
