#----------------------------------------------------------------------
# makeshape
#----------------------------------------------------------------------

add_subdirectory(common)
add_subdirectory(spatial)
# add_subdirectory(shapes)
# add_subdirectory(triangulate)
# add_subdirectory(surface_reconstruction)
add_subdirectory(app)
